syntax = "proto3";
package black.earn.v1beta1;

import "gogoproto/gogo.proto";
import "black/earn/v1beta1/vault.proto";

option go_package = "github.com/zeta-protocol/black/x/earn/types";

// Params defines the parameters of the earn module.
message Params {
  repeated AllowedVault allowed_vaults = 1 [
    (gogoproto.castrepeated) = "AllowedVaults",
    (gogoproto.nullable) = false
  ];
}
