syntax = "proto3";
package black.issuance.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "black/issuance/v1beta1/genesis.proto";

option go_package = "github.com/zeta-protocol/black/x/issuance/types";

// Query defines the gRPC querier service for issuance module
service Query {
  // Params queries all parameters of the issuance module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/black/issuance/v1beta1/params";
  }
}

// QueryParamsRequest defines the request type for querying x/issuance parameters.
message QueryParamsRequest {}

// QueryParamsResponse defines the response type for querying x/issuance parameters.
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}
